UI/src/app/component/cumulative-line-chart/cumulative-line-chart.component.css
#container{
  position: relative;
  width: 100%;
}

.chart-container{
  display: flex;
  justify-content: center;
  position: relative;
}

.yaxis-container{
  position: relative;
    width: 50px;
}

#chart{
    position: relative;
    overflow-x: auto;
    width: 100%;
}

.tooltip-container{
    position: relative;
}

:host ::ng-deep.x-caption{
    display: flex;
    justify-content: center;
    color: #437495;
    margin: 0.5rem 0rem;
    width: 100%;
}

:host::ng-deep .yAxis .domain, :host::ng-deep .xAxis .domain {
    display: none;
  }

:host ::ng-deep.y-caption{
    position: absolute;
    display: flex;
    flex-direction: column;
    align-items: center;
    left: 0;
    top: 0;
    height: 100%;
    justify-content: center;
    margin-bottom: 1rem;
    color: #437495;
}

:host ::ng-deep.y-caption span{
  transform: rotate(270deg);
}

:host ::ng-deep.tooltip{
    display: none;
    font-size: 0.7rem;
    padding: 2px;
    position: absolute;
    color: var(--color-gray-34);


    background: rgba(255, 255, 255, 0.95);
    border-radius: 2px;
    box-shadow: 0px 0px 6px #b9b9bb;
    opacity: 0.5;
   
}

#legendContainer{
  width: 100%;
}

:host::ng-deep .legend_item {
    margin-right: 10px;
    margin-top: 8px;
    display: flex;
    align-items: center;
  }
  
  :host::ng-deep .legend_color_indicator {
    width: 12px;
    height: 12px;
    display: inline-block;
    vertical-align: middle;
  }

  :host::ng-deep .legend_color_indicator_dashed{
    width: 2rem;
    border-top: 3px dashed #D8725F;
  }

  :host::ng-deep div#legendContainer.normal-legend{
    font-size: 12px;
    color: var(--color-gray-34);
    position: relative !important;
    margin-bottom: 1rem;
  }

  :host::ng-deep #legendContainer.normal-legend{
    font-size: 12px;
    color: var(--color-gray-34);
    position: absolute !important;
  }

